Adds benchmark